--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,7 @@
     --section-padding: 16px;
 }
 
-/* img {
-    width: 100%;
-    height: fit-content;
-} */
+
 
 * {
     margin: 0;
@@ -23,9 +20,13 @@ body {
     body {
       flex-direction: column;
     }
-    #side-image-container {
-        max-height: 30vh;
+    #side-banner-container {
+        max-height: 50vh;
     }
+}
+
+main {
+    flex-grow: 2;
 }
 
 #description {
@@ -43,28 +44,37 @@ form {
     grid-template-columns: auto auto;
 }
 
-#side-image-container {
+#side-banner-container {
     position:relative;
     text-align: center;
     width: max-content;
+    max-width: 50vh;
     height: 100vh;
     background-image: url(/images/food.jpg);
     background-size: cover;
 }
 
-#side-image-container h1{
-    color: white;
-    font-size: 64px;
+#logo-container {
     background:rgba(22, 22, 22, 0.658);
     position: relative;
-    top: 50%;
+    top: 40%;
 }
 
-#side-image-container p {
-    position: relative;
-    bottom: 2%;
-    left: 50%; 
-    transform: translate(-50%, -50%);
+#logo-container img {
+    width: 10%;
+    height: fit-content;
+}
+
+#side-banner-container h1{
+    color: white;
+    font-size: 64px;
+    padding: 16px 0;
+}
+
+#side-banner-container p {
+    position: absolute;
+    bottom: 1%;
+    right: 1%;
     color: white;
     background: rgba(233, 233, 233, 0.2)
 }
