--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 :root {
     --section-padding: 16px;
     font-size: 18px;
+    --color-invalid: red;
+    --color-valid: green;
 }
 
 * {
@@ -38,6 +40,11 @@ main {
     box-shadow: 5px 10px 8px #888888;
 }
 
+#signup-container p {
+    font-size: 12px;
+    /* color: #888888; */
+}
+
 form {
     padding: var(--section-padding);
     display: grid;
@@ -67,6 +74,41 @@ label {
     gap: 16px;
 }
 
+input {
+    border: 2px solid rgb(173, 173, 173);
+    border-radius: 4px;
+}
+
+input:focus {
+    border: 2px solid rgb(255, 255, 255);
+    outline: 2px solid rgb(206, 110, 0);
+}
+
+input:required:valid {
+    /* border: 2px solid rgb(0, 196, 0); */
+    background: rgb(255, 255, 255) url(images/check.svg) right no-repeat;
+    background-size: 25px;
+}
+input:not(:focus):not(:placeholder-shown):valid {
+    border-color: var(--color-valid);
+    
+}
+
+input:not(:focus):not(:placeholder-shown):invalid {
+    border-color: var(--color-invalid);
+}
+
+.error-message {
+    opacity: 0;
+    font-weight: bold;
+    padding: 4px;
+}
+input:not(:focus):not(:placeholder-shown):invalid ~ .error-message {
+    display: block;
+    color: var(--color-invalid);
+    opacity: 1;
+}
+
 input[type=submit] {
     padding: 10px 40px;
     text-decoration: none;
@@ -77,7 +119,6 @@ input[type=submit] {
     color: white;
     box-shadow: 2px 2px 4px #888888;
 }
-
 
 #side-banner-container {
     position:relative;
@@ -120,7 +161,8 @@ input[type=submit] {
     bottom: 1%;
     right: 1%;
     color: white;
-    background: rgba(233, 233, 233, 0.2)
+    background: rgba(233, 233, 233, 0.2);
+    font-size: 12px;
 }
 
 a {
